Fix alignment

--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -52,6 +52,7 @@ header {
 
         .content-mobile {
             display: flex;
+            align-items: center;
             gap: 15px;
         }
 
